--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body {
     width: 100vw;
     height: 100vh;
-    background-color: #333;
+    background-color: #2a90c4;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     margin: 0;
 }
@@ -26,14 +26,15 @@ body {
     width: 100%;
     height: 100%;
     font-size: 3rem;
-    border: 2px solid white;
+    border: 4px solid white;
     display: grid;
     place-items: center;
+    color: #000;
 }
 
 #resultado {
     grid-area: 6 / 1 / 6 / 4;
-    padding: 2px 0;
+    padding: 10px 0;
     text-align: center;
     font-size: 2rem;
 }
@@ -42,4 +43,19 @@ body {
 .autor {
     text-align: center;
     color: #FFF;
+}
+
+.container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#resetButton {
+    font-size: 20px;
+    text-align: center;
+    padding: 10px 60px;
+    border-radius: 5%;
+    text-transform: uppercase;
+    font-weight: bold;
 }
